--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "build": "webpack",
     "dev": "webpack serve"
   },
-  "author": "Brad Traversy",
+  "author": "Mark Karman",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.20.7",
